2008-03-26 Fix SVG backend bug that prevents copying and pasting in
           Inkscape (thanks Kaushik Ghose) - MGD

2008-03-24 Removed an unnecessary call to draw() in the backend_qt*
           mouseReleaseEvent. Thanks to Ted Drain - DSD

2008-03-23 Fix a pdf backend bug which sometimes caused the outermost
           gsave to not be balanced with a grestore. - JKS

2008-03-20 Fixed a minor bug in ContourSet._process_linestyles when
           len(linestyles)==Nlev - MM

2008-03-19 Changed ma import statements to "from numpy import ma";
           this should work with past and future versions of
           numpy, whereas "import numpy.ma as ma" will work only
           with numpy >= 1.05, and "import numerix.npyma as ma"
           is obsolete now that maskedarray is replacing the
           earlier implementation, as of numpy 1.05.

2008-03-14 Removed an apparently unnecessary call to
           FigureCanvasAgg.draw in backend_qt*agg. Thanks to Ted
           Drain - DSD

2008-03-10 Workaround a bug in backend_qt4agg's blitting due to a
           buffer width/bbox width mismatch in _backend_agg's
           copy_from_bbox - DSD

2008-02-29 Fix class Wx toolbar pan and zoom functions (Thanks Jeff
           Peery) - MGD

2008-02-16 Added some new rec array functionality to mlab
           (rec_summarize, rec2txt and rec_groupby).  See
           examples/rec_groupby_demo.py.  Thanks to Tim M for rec2txt.

2008-02-12 Applied Erik Tollerud's span selector patch - JDH

2008-02-11 Update plotting() doc string to refer to getp/setp. - JKS

2008-02-10 Fixed a problem with square roots in the pdf backend with
           usetex. - JKS

2008-02-08 Fixed minor __str__ bugs so getp(gca()) works. - JKS

2008-02-05 Added getters for title, xlabel, ylabel, as requested
           by Brandon Kieth - EF

2008-02-05 Applied Gael's ginput patch and created
           examples/ginput_demo.py - JDH

2008-02-03 Expose interpnames, a list of valid interpolation