@@ -286,19 +286,23 @@ class FigureCanvasAgg(FigureCanvasBase):
     def get_default_filetype(self):
         return 'png'
 
-    def print_raw(self, filename, *args, **kwargs):
-        FigureCanvasAgg.draw(self)
-        original_dpi = renderer.dpi
-        renderer.dpi = self.figure.dpi
-        renderer._renderer.write_rgba(str(filename))
-        renderer.dpi = original_dpi
-    print_rgba = print_raw
-
-    def print_png(self, filename, *args, **kwargs):
+    def print_raw(self, filename_or_obj, *args, **kwargs):
         FigureCanvasAgg.draw(self)
         renderer = self.get_renderer()
         original_dpi = renderer.dpi
         renderer.dpi = self.figure.dpi
-        filename = str(filename) # until we figure out unicode handling
-        renderer._renderer.write_png(filename, self.figure.dpi)
+        if type(filename_or_obj) in (str, unicode):
+            filename_or_obj = open(filename_or_obj, 'w')
+        renderer._renderer.write_rgba(filename_or_obj)
+        renderer.dpi = original_dpi
+    print_rgba = print_raw
+
+    def print_png(self, filename_or_obj, *args, **kwargs):
+        FigureCanvasAgg.draw(self)
+        renderer = self.get_renderer()
+        original_dpi = renderer.dpi
+        renderer.dpi = self.figure.dpi
+        if type(filename_or_obj) in (str, unicode):
+            filename_or_obj = open(filename_or_obj, 'w')
+        self.get_renderer()._renderer.write_png(filename_or_obj, self.figure.dpi)
         renderer.dpi = original_dpi
