@@ -376,7 +376,7 @@ class NavigationToolbar2QT( NavigationToolbar2, QtGui.QToolBar ):
             self, "Choose a filename to save to", start, filters, selectedFilter)
         if fname:
             try:
-                self.canvas.print_figure( str(fname.toLatin1()) )
+                self.canvas.print_figure( unicode(fname) )
             except Exception, e:
                 QtGui.QMessageBox.critical(
                     self, "Error saving file", str(e),
